--- a/vignettes/basic_principles.Rmd
+++ b/vignettes/basic_principles.Rmd
@@ -23,12 +23,13 @@ The basic principle of the SCDB package is to enable the user to easily implemen
 
 In practice, this is done by labelling each record in the data with three additional fields:
 
-* checksum: the md5 hash of the information stored in the record
-* from\_ts: the timestamp at which the record was first introduced to the dataset
-* until\_ts: the timestamp at which the record was first removed from the dataset
+* checksum: An md5 hash of information stored the record
+* from\_ts: the timestamp at which the record was introduced to the dataset
+* until\_ts: the timestamp at which the record was removed from the dataset
 
-Note: This strategy of time versioning is often called "type 2" history.
+This strategy of time versioning is often called "type 2" history.
 
+Note that identical records may be removed and introduced more than once; for example, in a table of names and addresses, a person may change their address (or name) back to a previous value.
 
 The SCDB package provides the function `update_snapshot` to handle the insertion and deactivation of records using this strategy.
 It further includes several functions to improve the quality-of-life for working with databases.
