--- a/vignettes/basic_principles.Rmd
+++ b/vignettes/basic_principles.Rmd
@@ -42,11 +42,13 @@ A simple example is shown below:
 # can be done after the configuration of a .pgpass file.
 # For this example, we use an on-disk SQLite db to showcase.
 conn <- get_connection(drv = RSQLite::SQLite())
-# NOTE: Had the PostgreSQL DB been configured, we would not need to pass any args to get_connection()
+# NOTE: Had the PostgreSQL DB been configured, we would not need to pass any args
+# to get_connection()
 ```
 
 ```{r example_data}
-# Our example data is mtcars with rownames converted to a column and only the first hp column of mtcars
+# Our example data is mtcars with rownames converted to a column and only the first hp
+# column of mtcars
 example_data <- dplyr::transmute(mtcars, car = rownames(mtcars), hp)
 # If the data does not already live on the remote, we must transfer it
 example_data <- dplyr::copy_to(conn, example_data, overwrite = TRUE)
@@ -54,8 +56,8 @@ example_data <- dplyr::copy_to(conn, example_data, overwrite = TRUE)
 ```
 
 ```{r example_1}
-# In this example, we imagine that on day 1, in this case 2020-01-01 11:00:00, our data known to us is
-# the first 3 records of mtcars
+# In this example, we imagine that on day 1, in this case 2020-01-01 11:00:00, our data
+# known to us is the first 3 records of mtcars
 data <- head(example_data, 3)
 ```
 
@@ -63,7 +65,7 @@ data <- head(example_data, 3)
 # We then store these data in the database using update_snapshot
 update_snapshot(.data = data,
                 conn = conn,
-                db_table = "mtcars", # the name of the DB table we want to store the data in
+                db_table = "mtcars", # the name of the DB table to store the data in
                 timestamp = as.POSIXct("2020-01-01 11:00:00"))
 ```
 ```{r update_snapshot_1_hidden, results = 'hide', echo = FALSE}
@@ -71,7 +73,7 @@ update_snapshot(.data = data,
 invisible(capture.output({  # NOTE: update_snapshot does some printing to terminal
   update_snapshot(.data = data,
                   conn = conn,
-                  db_table = "mtcars", # the name of the DB table we want to store the data in
+                  db_table = "mtcars", # the name of the DB table to store the data in
                   timestamp = as.POSIXct("2020-01-01 11:00:00"))
 }))
 ```
@@ -93,7 +95,7 @@ data <- head(example_data, 5)
 # We then store these data in the database using update_snapshot
 update_snapshot(.data = data,
                 conn = conn,
-                db_table = "mtcars", # the name of the DB table we want to store the data in
+                db_table = "mtcars", # the name of the DB table to store the data in
                 timestamp = as.POSIXct("2020-01-02 12:00:00"))
 ```
 ```{r update_snapshot_2_hidden, results = 'hide', echo = FALSE}
@@ -101,25 +103,25 @@ update_snapshot(.data = data,
 invisible(capture.output({
   update_snapshot(.data = data,
                   conn = conn,
-                  db_table = "mtcars", # the name of the DB table we want to store the data in
+                  db_table = "mtcars", # the name of the DB table to store the data in
                   timestamp = as.POSIXct("2020-01-02 12:00:00"))
 }))
 ```
 
 ```{r example_2_results}
 
-# We can again access our data using the `get_table` function and see the latest available data
+# We again use the `get_table` function and see the latest available data
 print(get_table(conn, "mtcars"))
 
 # And we can see the time-keeping if we set `include_slice_info = TRUE`
 print(get_table(conn, "mtcars", include_slice_info = TRUE))
 
-# Since our data is time-versioned, we can still recover the data as it looked the day before
+# Since our data is time-versioned, we can recover the data from the day before
 print(get_table(conn, "mtcars", slice_ts = "2020-01-01 11:00:00"))
 ```
 
 ```{r example_3}
-# On day 3, we imagine that we have the same 5 records, but one of them is altered slightly
+# On day 3, we imagine that we have the same 5 records, but one of them is altered
 data <- head(example_data, 5) |>
   dplyr::mutate(hp = ifelse(dplyr::row_number() == 1, hp / 2, hp))
 ```
@@ -128,29 +130,30 @@ data <- head(example_data, 5) |>
 # We then store these data in the database using update_snapshot
 update_snapshot(.data = data,
                 conn = conn,
-                db_table = "mtcars", # the name of the DB table we want to store the data in
+                db_table = "mtcars", # the name of the DB table to store the data in
                 timestamp = as.POSIXct("2020-01-03 10:00:00"))
 ```
-```{r update_snapshot_3_hidden, results = 'hide', echo = FALSE}
+```{r update_snapshot_3_hidden, results = "hide", echo = FALSE}
 # We then store these data in the database using update_snapshot
 invisible(capture.output({
   update_snapshot(.data = data,
                   conn = conn,
-                  db_table = "mtcars", # the name of the DB table we want to store the data in
+                  db_table = "mtcars", # the name of the DB table to store the data in
                   timestamp = as.POSIXct("2020-01-03 10:00:00"))
 }))
 ```
 
 ```{r example_3_results}
-# We can again access our data using the `get_table` function and see that the currently available data
-# (with the changed hp value for Mazda RX4)
+# We can again access our data using the `get_table` function and see that the currently
+# available data (with the changed hp value for Mazda RX4)
 print(get_table(conn, "mtcars"))
 
 
 # When `slice_ts` is set to `NULL`, the full history of the table is returned
 print(get_table(conn, "mtcars", slice_ts = NULL))
 
-# Setting include_slice_info to TRUE also returns the checksum, from_ts and until_ts fields.
+# Setting include_slice_info = TRUE also returns checksum, from_ts and until_ts.
 # This is most useful when viewing data from a specific point in time
-print(get_table(conn, "mtcars", slice_ts = "2020-01-03 06:30:00", include_slice_info = TRUE))
+print(get_table(conn, "mtcars", slice_ts = "2020-01-03 06:30:00",
+                include_slice_info = TRUE))
 ```
