docs: rename basic_principles to basic-principles

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(
 More specifically, the package facilitates type-2 history for data warehouses and provide a number of quality-of-life improvements for working with SQL databases within R.
 
 To better understand what a slowly changing dimension is and how and this packages provides it,
-see `vignette("basic_principles")`.
+see `vignette("basic-principles")`.
 
 ## Installation
 
@@ -43,4 +43,4 @@ devtools::install_github("ssi-dk/SCDB")
 
 ## Usage
 
-For basic usage examples, see `vignette("basic_principles")`.
+For basic usage examples, see `vignette("basic-principles")`.
