--- a/vignettes/basic-principles.Rmd
+++ b/vignettes/basic-principles.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Basic principles"
 output: rmarkdown::html_vignette
+bibliography: "references.bib"
 vignette: >
   %\VignetteIndexEntry{Basic principles}
   %\VignetteEngine{knitr::rmarkdown}
@@ -14,11 +15,25 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup, results = 'hide'}
+```{r setup, echo = FALSE, results = 'hide'}
 suppressPackageStartupMessages(library(SCDB))
-options("SCDB.log_path" = tempdir())
-```
 
+# Setup conn to be used for examples
+conn <- get_connection(drv = RSQLite::SQLite())
+
+# Setup log table in temporary db
+SCDB::create_logs_if_missing("logs", conn)
+options("SCDB.log_table_id" = "logs")
+
+# Use a wrapper for update_snapshot which uses a quiet Logger
+if (!"update_snapshot" %in% ls(envir = globalenv())) {
+  logger <- Logger$new(output_to_console = FALSE, log_table_id = "logs", log_conn = conn)
+  update_snapshot <- function(...) return(invisible(SCDB::update_snapshot(logger = logger, ...)))
+}
+
+# Setup example_data table in conn
+example_data <- dplyr::copy_to(conn, dplyr::transmute(datasets::mtcars, car = rownames(mtcars), hp), overwrite = TRUE)
+```
 The basic principle of the SCDB package is to enable the user to easily implement and maintain a database of time-versioned data.
 
 In practice, this is done by labeling each record in the data with three additional fields:
@@ -27,133 +42,93 @@ In practice, this is done by labeling each record in the data with three additio
 * from\_ts: the timestamp at which the record was introduced to the dataset
 * until\_ts: the timestamp at which the record was removed from the dataset
 
-This strategy of time versioning is often called "type 2" history.
+This strategy of time versioning is often called "type 2" history [@Kimball2013].
 
 Note that identical records may be removed and introduced more than once; for example, in a table of names and addresses, a person may change their address (or name) back to a previous value.
 
 The SCDB package provides the function `update_snapshot` to handle the insertion and deactivation of records using this strategy.
 It further includes several functions to improve the Quality of life for working with database data.
 
-A simple example is shown below:
+A simple example of usage is shown below.<br/>
+For this example, we use a temporary, on-disk SQLite database.
+Note that `get_connection` tries to establish connection using `DBI::dbConnect` with as few additional arguments as possible.
+Different drivers may require authentication which can be read from a configuration file.^[
+In the context of the SCDB package, this is most notably `RPostgres::Postgres()`, which may read from a `.pgpass` file.
+See also the [PostgreSQL documentation](https://www.postgresql.org/docs/current/libpq-pgpass.html).
+]
 
-```{r example_conn}
-# First we connect to our database.
-# If this is, e.g., a PostgreSQL database already running on the machine, connection
-# can be done after the configuration of a .pgpass file.
-# For this example, we use an on-disk SQLite db to showcase.
-conn <- get_connection(drv = RSQLite::SQLite())
-# NOTE: Had the PostgreSQL DB been configured, we would not need to pass any args
-# to get_connection()
+Our example data is `datasets::mtcars` reduced to only two columns: row names converted to a column `car`, and `hp`
+```{r example_data, eval = FALSE}
+if (!exists("conn")) conn <- get_connection(drv = RSQLite::SQLite())
+
+example_data <- dplyr::tbl(conn, DBI::Id(table = "example_data"))
+example_data
 ```
 
-```{r example_data}
-# Our example data is mtcars with rownames converted to a column and only the first hp
-# column of mtcars
-example_data <- dplyr::transmute(mtcars, car = rownames(mtcars), hp)
-# If the data does not already live on the remote, we must transfer it
-example_data <- dplyr::copy_to(conn, example_data, overwrite = TRUE)
-
-```
-
+Imagine on Day 1, in this case January 1st, 2020, our currently available data is the first three records of the example_data.
+We then store this data in a table "mtcars":
 ```{r example_1}
-# In this example, we imagine that on day 1, in this case 2020-01-01 11:00:00, our data
-# known to us is the first 3 records of mtcars
 data <- head(example_data, 3)
-```
 
-```{r update_snapshot_1, eval = FALSE}
-# We then store these data in the database using update_snapshot
 update_snapshot(.data = data,
                 conn = conn,
                 db_table = "mtcars", # the name of the DB table to store the data in
                 timestamp = as.POSIXct("2020-01-01 11:00:00"))
 ```
-```{r update_snapshot_1_hidden, results = 'hide', echo = FALSE}
-# We then store these data in the database using update_snapshot
-invisible(capture.output({  # NOTE: update_snapshot does some printing to terminal
-  update_snapshot(.data = data,
-                  conn = conn,
-                  db_table = "mtcars", # the name of the DB table to store the data in
-                  timestamp = as.POSIXct("2020-01-01 11:00:00"))
-}))
-```
 
+We can then access out data using the `get_table` function, and include information on data validity period using `include_slice_info = TRUE`:
 ```{r example_1_results}
-# We can access our data using the `get_table` function
-print(get_table(conn, "mtcars"))
+get_table(conn, "mtcars")
 
-# And we can see the time-keeping if we set `include_slice_info = TRUE`
-print(get_table(conn, "mtcars", include_slice_info = TRUE))
+get_table(conn, "mtcars", include_slice_info = TRUE)
 ```
+Note that where e.g. `dplyr::tbl` requires a more exact specification of the table identity (`tbl(conn, DBI::Id(table = "mtcars"))`), `get_table` will parse any character to a `DBI::Id` object input using `SCDB::id`.
+
+The following day, the current data is now the first five rows of our example data.
+We then store this data in the database using update_snapshot:
 
 ```{r example_2}
 # Let's say that the next day, our data set is now the first 5 of our example data
 data <- head(example_data, 5)
-```
 
-```{r update_snapshot_2, eval = FALSE}
-# We then store these data in the database using update_snapshot
 update_snapshot(.data = data,
                 conn = conn,
                 db_table = "mtcars", # the name of the DB table to store the data in
                 timestamp = as.POSIXct("2020-01-02 12:00:00"))
 ```
-```{r update_snapshot_2_hidden, results = 'hide', echo = FALSE}
-# We then store these data in the database using update_snapshot
-invisible(capture.output({
-  update_snapshot(.data = data,
-                  conn = conn,
-                  db_table = "mtcars", # the name of the DB table to store the data in
-                  timestamp = as.POSIXct("2020-01-02 12:00:00"))
-}))
+We can again use the `get_table` function to see the latest available data, including time-keeping with `include_slice_info = TRUE`:
+```{r example_2_results_a}
+get_table(conn, "mtcars")
+
+get_table(conn, "mtcars", include_slice_info = TRUE)
 ```
 
-```{r example_2_results}
-
-# We again use the `get_table` function and see the latest available data
-print(get_table(conn, "mtcars"))
-
-# And we can see the time-keeping if we set `include_slice_info = TRUE`
-print(get_table(conn, "mtcars", include_slice_info = TRUE))
-
-# Since our data is time-versioned, we can recover the data from the day before
-print(get_table(conn, "mtcars", slice_ts = "2020-01-01 11:00:00"))
+Since our data is time-versioned, we can recover the data from the day before
+```{r example_2_results_b}
+get_table(conn, "mtcars", slice_ts = "2020-01-01 11:00:00")
 ```
+
+On day 3, we imagine that we have the same 5 records, but one of them is altered
 
 ```{r example_3}
-# On day 3, we imagine that we have the same 5 records, but one of them is altered
 data <- head(example_data, 5) |>
   dplyr::mutate(hp = ifelse(dplyr::row_number() == 1, hp / 2, hp))
-```
 
-```{r update_snapshot_3, eval = FALSE}
-# We then store these data in the database using update_snapshot
 update_snapshot(.data = data,
                 conn = conn,
                 db_table = "mtcars", # the name of the DB table to store the data in
                 timestamp = as.POSIXct("2020-01-03 10:00:00"))
 ```
-```{r update_snapshot_3_hidden, results = "hide", echo = FALSE}
-# We then store these data in the database using update_snapshot
-invisible(capture.output({
-  update_snapshot(.data = data,
-                  conn = conn,
-                  db_table = "mtcars", # the name of the DB table to store the data in
-                  timestamp = as.POSIXct("2020-01-03 10:00:00"))
-}))
+
+We can again access our data using the `get_table` function and see that the currently
+available data (with the changed hp value for Mazda RX4)
+```{r example_3_results_a}
+get_table(conn, "mtcars")
 ```
 
-```{r example_3_results}
-# We can again access our data using the `get_table` function and see that the currently
-# available data (with the changed hp value for Mazda RX4)
-print(get_table(conn, "mtcars"))
-
-
-# When `slice_ts` is set to `NULL`, the full history of the table is returned
-print(get_table(conn, "mtcars", slice_ts = NULL))
-
-# Setting include_slice_info = TRUE also returns checksum, from_ts and until_ts.
-# This is most useful when viewing data from a specific point in time
-print(get_table(conn, "mtcars", slice_ts = "2020-01-03 06:30:00",
-                include_slice_info = TRUE))
+Finally, using `slice_ts = NULL`, the full history (and time-keeping information) is returned:
+```{r example_3_results_b}
+get_table(conn, "mtcars", slice_ts = NULL)
 ```
+
+### References
