--- a/vignettes/basic-principles.Rmd
+++ b/vignettes/basic-principles.Rmd
@@ -59,6 +59,7 @@ See also the [PostgreSQL documentation](https://www.postgresql.org/docs/current/
 
 Our example data is `datasets::mtcars` reduced to only two columns: row names converted to a column `car`, and `hp`
 ```{r example_data, eval = FALSE}
+library(SCDB)
 if (!exists("conn")) conn <- get_connection(drv = RSQLite::SQLite())
 
 example_data <- dplyr::tbl(conn, DBI::Id(table = "example_data"))
