--- a/vignettes/slowly-changing-dimension.Rmd
+++ b/vignettes/slowly-changing-dimension.Rmd
@@ -77,7 +77,7 @@ We could choose to update the forecasts table so that it would always contain th
 This is what is referred to as Type 1 methodology [@Kimball2013].
 
 Databases are thankfully a rather efficient way of storing and accessing data, so instead of discarding the values from the previous day, we append the new data to those of the previous day.
-Also, in order to keep our data organised, we add a column with the date of the forecast, aptly named `ForecastDate`.
+Also, in order to keep our data organized, we add a column with the date of the forecast, aptly named `ForecastDate`.
 
 The full table of forecasts for the two days now looks like below, and we are slowly building a full history of forecasts:
 ```{r forecasts_full}
