--- a/vignettes/basic-principles.Rmd
+++ b/vignettes/basic-principles.Rmd
@@ -23,7 +23,7 @@ conn <- get_connection(drv = RSQLite::SQLite())
 
 # Setup log table in temporary db
 SCDB::create_logs_if_missing("logs", conn)
-options("SCDB.log_table_id" = "logs")
+withr::local_options("SCDB.log_table_id" = "logs")
 
 # Use a wrapper for update_snapshot which uses a quiet Logger
 if (!"update_snapshot" %in% ls(envir = globalenv())) {
