--- a/vignettes/basic-principles.Rmd
+++ b/vignettes/basic-principles.Rmd
@@ -22,7 +22,7 @@ suppressPackageStartupMessages(library(SCDB))
 conn <- get_connection(drv = RSQLite::SQLite())
 
 # Setup log table in temporary db
-SCDB::create_logs_if_missing("logs", conn)
+SCDB::create_logs_if_missing(conn, "logs")
 withr::local_options("SCDB.log_table_id" = "logs")
 
 # Use a wrapper for update_snapshot which uses a quiet Logger
