--- a/README.Rmd
+++ b/README.Rmd
@@ -1,36 +1,11 @@
----
-output:
-  - github_document
-  - md_document
----
+{% extends '.github/templates/README_template.Rmd' %}
 
-<!-- README.md is generated from README.Rmd. Please edit that file. -->
-
-```{r, echo = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-"
-)
-```
-
-# SCDB <a href="https://ssi-dk.github.io/SCDB/"><img src="man/figures/logo.png" alt="SCDB website" align="right" height="138"/></a>
-
-<!-- badges: start -->
-
-[![CRAN
-status](https://www.r-pkg.org/badges/version/SCDB)](https://CRAN.R-project.org/package=SCDB)
-[![CI
-tests](https://github.com/ssi-dk/SCDB/actions/workflows/all-workflows.yaml/badge.svg)](https://github.com/ssi-dk/SCDB/actions/workflows/all-workflows.yaml)
-[![Codecov test
-coverage](https://codecov.io/gh/ssi-dk/SCDB/branch/main/graph/badge.svg)](https://app.codecov.io/gh/ssi-dk/SCDB?branch=main)
-
-<!-- badges: end -->
-
+{% block body %}
 ## Overview
 
 `SCDB` is a package for easily maintaining and updating data with a slowly changing dimension.
-More specifically, the package facilitates type-2 history for data warehouses and provide a number of quality-of-life improvements for working with SQL databases within R.
+More specifically, the package facilitates type-2 history for data warehouses and provide a number of quality-of-life
+improvements for working with SQL databases within R.
 
 To better understand what a slowly changing dimension is and how and this packages provides it,
 see `vignette("basic-principles")`.
@@ -49,3 +24,4 @@ devtools::install_github("ssi-dk/SCDB")
 ## Usage
 
 For basic usage examples, see `vignette("basic-principles")`.
+{% endblock %}
