--- a/vignettes/benchmarks.Rmd
+++ b/vignettes/benchmarks.Rmd
@@ -37,7 +37,7 @@ All benchmarks are run on the same machine.
 The results of the benchmark are shown graphically below (mean and standard deviation), where we compare the current
 development version of `SCDB` with the current CRAN version.
 
-```{r, echo = FALSE, eval = requireNamespace("here")}
+```{r benchmark_preprocessing, echo = FALSE, eval = requireNamespace("here")}
 benchmark_location <- c(
   system.file("extdata", "benchmarks.rds", package = "SCDB"),
   here::here("inst", "extdata", "benchmarks.rds")
@@ -50,7 +50,7 @@ benchmarks <- readRDS(benchmark_location)
 # Determine if the SHA is on main
 sha <- benchmarks |>
   dplyr::distinct(version) |>
-  dplyr::filter(!(version %in% c("CRAN", "main"))) |>
+  dplyr::filter(!(version %in% c("CRAN", "main", "branch"))) |>
   dplyr::pull("version")
 
 # Check local git history
@@ -71,25 +71,31 @@ if (on_main) {
     dplyr::mutate(version = dplyr::if_else(.data$version == "CRAN", "CRAN", "development"))
 }
 
-# Add note slow backends
-slow_backends <- benchmarks |>
-  dplyr::distinct(.data$database, .data$n) |>
-  dplyr::filter(.data$n < max(.data$n)) |>
-  dplyr::pull("database")
-
-benchmarks <- benchmarks |>
-  dplyr::mutate("database" = paste0(database, ifelse(database %in% slow_backends, "*", "")))
-
-
 # Mean and standard deviation (see ggplot2::mean_se())
 mean_sd <- function(x) {
   mu <- mean(x)
   sd <- sd(x)
   data.frame(y = mu, ymin = mu - sd, ymax = mu + sd)
 }
+```
+
+```{r benchmark_1, echo = FALSE, eval = requireNamespace("here")}
+# Use data for benchmark 1
+benchmark_1 <- benchmarks |>
+  dplyr::filter(!stringr::str_ends(.data$benchmark_function, "complexity"))
+
+# Add note slow backends
+slow_backends <- benchmark_1 |>
+  dplyr::distinct(.data$database, .data$n) |>
+  dplyr::filter(.data$n < max(.data$n)) |>
+  dplyr::pull("database")
+
+benchmark_1 <- benchmark_1 |>
+  dplyr::mutate("database" = paste0(database, ifelse(database %in% slow_backends, "*", "")))
+
 
 g <- ggplot2::ggplot(
-  benchmarks,
+  benchmark_1,
   ggplot2::aes(x = version, y = time / 1e9)
 ) +
   ggplot2::stat_summary(fun.data = mean_sd, geom = "pointrange", size = 0.5, linewidth = 1) +
@@ -101,4 +107,31 @@ if (length(slow_backends) > 1) {
 }
 
 g
+```
+
+
+We include another benchmark to highlight the complexity scaling of the `update_snapshot() ` with the size of the input
+data. The datasets are similar to the first benchmark is used, but the number of repeats is varied to see the impact of
+increasing data size. The benchmarks are run from a "clean" state, where the target_table does not exists. The benchmark
+measures both the time to create the table and to remove it again afterwards (to restore the clean state).
+
+The performance of this benchmark function is timed with the `microbenchmark` package using 5 replicates.
+All benchmarks are run on the same machine.
+
+The results of the benchmark are shown graphically below (mean and standard deviation), where we compare the current
+development version of `SCDB` with the current CRAN version.
+
+```{r benchmark_2, echo = FALSE, eval = requireNamespace("here")}
+# Use data for benchmark 2
+benchmark_2 <- benchmarks |>
+  dplyr::filter(stringr::str_ends(.data$benchmark_function, "complexity"))
+
+ggplot2::ggplot(
+  benchmark_2,
+  ggplot2::aes(x = n * nrow(iris) / 1e3, y = time / 1e9, color = version)
+) +
+  ggplot2::stat_summary(fun.data = mean_sd, geom = "pointrange", size = 0.5, linewidth = 1) +
+  ggplot2::facet_grid(rows = ggplot2::vars(benchmark_function), cols = ggplot2::vars(database)) +
+  ggplot2::labs(x = "Data size (1,000 rows)", y = "Time (s)") +
+  ggplot2::theme(panel.spacing = grid::unit(1, "lines"))
 ```
