--- a/vignettes/benchmarks.Rmd
+++ b/vignettes/benchmarks.Rmd
@@ -121,6 +121,9 @@ All benchmarks are run on the same machine.
 The results of the benchmark are shown graphically below (mean and standard deviation), where we compare the current
 development version of `SCDB` with the current CRAN version.
 
+NOTE: There are reports of a superlinear complexity for very large data sets. If you experience such problems, consider
+batching the updates via the `filters` argument.
+
 ```{r benchmark_2, echo = FALSE, eval = requireNamespace("here")}
 # Use data for benchmark 2
 benchmark_2 <- benchmarks |>
